# 주석 작성 # Spring boot 버전 업그레이드   - 버전 업그레이드에 따른 코드 수정     주요 항목     - TableComment 제거       @Comment 를 사용할 수 있어서 필요 없음     - SecurityConfig 에 @Secured 설정 추가     - Elasticsearch 기능 전체 제거       버전 업그레이드로 인해 deprecated 된 항목 중       elasticsearch 설정과 관련된 항목이 있는 것으로 확인됨       수정해서 설정을 완료하고 싶었으나       해당 이슈가 단시간에 끝나지 않을 것으로 판단되어 보류       TODO: elasticsearch 기능 추가 # test infra 관련 gradle task 추가
TODO: 동적 권한 & logstash 설정